Update file details in manifest.json

--- a/public/files/manifest.json
+++ b/public/files/manifest.json
@@ -1,10 +1,10 @@
 {
   "files": [
     {
-      "name": "Document d'exemple",
-      "path": "/files/example-document.txt",
+      "name": "Avion 3D",
+      "path": "/files/3d_avion.docx",
       "type": "Document texte",
-      "size": "1 KB"
+      "size": "2 MB"
     },
     {
       "name": "Présentation du Projet",
