Add new images to gallery manifest

--- a/public/gallery/manifest.json
+++ b/public/gallery/manifest.json
@@ -29,6 +29,16 @@
       "src": "/gallery/IMG_20260113_170657.jpg",
       "alt": "Test d'un code Arduino pour démarrer le moteur",
       "size": "medium"
+    },
+    {
+      "src": "/gallery/WhatsApp Image 2026-01-16 at 09.20.11 (1).jpeg",
+      "alt": "Ailes et ailerons",
+      "size": "large"
+    },
+    {
+      "src": "/gallery/WhatsApp Image 2026-01-16 at 09.20.11.jpeg",
+      "alt": "Ailes et ailerons",
+      "size": "small"
     }
   ],
   "_instructions": {
