--- a/package.json
+++ b/package.json
@@ -8,19 +8,11 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "android:build": "./scripts/build-android.sh",
-    "android:open": "npx cap open android",
-    "android:sync": "npm run build && npx cap sync android",
-    "android:setup": "./scripts/generate-keystore.sh",
-    "android:env": "./scripts/setup-android-env.sh"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.864.0",
     "@aws-sdk/s3-request-presigner": "^3.864.0",
-    "@capacitor/android": "^8.0.1",
-    "@capacitor/cli": "^7.4.5",
-    "@capacitor/core": "^8.0.1",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
